# vyos-bcast-relay

./: .gitignore  AUTHORS  Makefile.am  README  configure.ac
debian/: README  changelog  control  copyright  rules
scripts/: ubnt-bcast-relay.pl
templates-cfg/service/bcast-relay/: node.def
templates-cfg/service/bcast-relay/id/: node.def
templates-cfg/service/bcast-relay/id/node.tag/address/: node.def
templates-cfg/service/bcast-relay/id/node.tag/description/: node.def
templates-cfg/service/bcast-relay/id/node.tag/interface/: node.def
templates-cfg/service/bcast-relay/id/node.tag/port/: node.def
